--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Shelley, Mary Wollstonecraft, 1797-1851'
 - !lcc 'PR'
 - !lcsh 'Authors, English -- 19th century -- Biography'
+- GITenberg
 title: Mrs. Shelley
 url: http://www.gutenberg.org/ebooks/6705
